methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:29: error: ':' expected but ')' found.
def faireV(c) {
            ^MethodsPicture:58: error: identifier expected but '}' found.
}
^